# TrueFluentPro

./: .gitignore  3.14变更-2.2.md  3.14变更-2.md  3.14变更.md  3.21.md  4.18.md  4.28总结对比.md  4.28第一次工作计划.md  App.axaml  App.axaml.cs  Crash日志记录.md  MainWindow.axaml  MainWindow.axaml.cs  Program.cs  README.md  TrueFluentPro.csproj  TrueFluentPro.sln  UI改进计划.md  app.manifest  ddd分析.md  desktop.ini  macos设计.md  分析DocumentTranslation.Desktop的翻译与文本转语音功能.md  分析图片加载问题.md  可落地方案.md  右键菜单在avaloniaui和FluentAvalonia中的特殊定义.md  右键菜单计划.md  容器化思考.md  容器化方案设计.md  对话框功能.md  对话框功能整改1.md  现阶段设计.md  计划3.14.md  配置中心3.4设计.md  配置中心3.4设计变更.md  配置中心探索.md  配置改进.md
Rust/rustnew-backend/: .gitignore  Cargo.toml  README.md  build-desktop.ps1  build-sdk.ps1  build-test-ui.ps1
Rust/rustnew-backend/crates/core/: Cargo.toml
Rust/rustnew-backend/crates/core/src/: audio.rs  audio_mix.rs  audio_recorder.rs  capability.rs  config.rs  endpoint.rs  endpoint_profile.rs  endpoint_test.rs  error.rs  lib.rs  model.rs  speech_resource.rs  storage.rs
Rust/rustnew-backend/crates/desktop/: Cargo.toml  build.rs  tauri.conf.json
Rust/rustnew-backend/crates/desktop/capabilities/: default.json
Rust/rustnew-backend/crates/desktop/icons/: icon.icns
Rust/rustnew-backend/crates/desktop/src/: audio_devices.rs  audio_loopback.rs  commands.rs  lib.rs  live.rs  main.rs  recorder.rs  state.rs
Rust/rustnew-backend/crates/desktop/ui/: audiopanel.js  core.js  i18n.js  live.js  (+4 more)
Rust/rustnew-backend/crates/speech-sdk/: Cargo.toml  build.rs
Rust/rustnew-backend/crates/speech-test-ui/: Cargo.toml  build.rs
Rust2/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
Rust2/src-tauri/.cargo/: config.toml
Rust2/src-tauri/capabilities/: default.json
Rust2/src-tauri/src/: commands.rs  lib.rs  main.rs  models.rs  profile_loader.rs  state.rs  storage.rs  task_engine.rs  task_event_bus.rs
Rust2/src-tauri/src/commands/: audio.rs  audiolab.rs  auth.rs  center.rs  config.rs  floating.rs  live.rs  media.rs  mod.rs  monitor.rs  session.rs  studio.rs  system.rs  test.rs  translate.rs
Rust2/src-tauri/src/image_pipeline/: catalog.rs  file_cache.rs  mod.rs  pipeline.rs
Rust2/src-tauri/src/providers/: azure_speech.rs  azure_stt.rs  azure_tts.rs  mod.rs  openai_chat.rs  openai_image.rs  openai_realtime.rs  openai_translation.rs  openai_video.rs  registry.rs
Rust3/crates/tfp-audiolab/: Cargo.toml
Rust3/crates/tfp-audiolab/src/: audio_util.rs  format.rs  lib.rs  prompts.rs  services.rs  stage_runner.rs
Rust3/crates/tfp-chat/: Cargo.toml
Rust3/crates/tfp-chat/src/: dialog_export.rs  dialog_search.rs  lib.rs  streaming.rs
Rust3/crates/tfp-media/: Cargo.toml
Rust3/crates/tfp-media/src/: catalog.rs  center_service.rs  center_validation.rs  file_cache.rs  image_pipeline.rs  lib.rs  save_image.rs  studio_service.rs  video_service.rs  video_util.rs
Rust3/crates/tfp-providers/: Cargo.toml
Rust3/crates/tfp-providers/src/: auth.rs  azure_speech.rs  azure_stt.rs  azure_tts.rs  blob_storage.rs  lib.rs  openai_chat.rs  openai_image.rs  openai_realtime.rs  openai_stt.rs  openai_translation.rs  openai_tts.rs  openai_video.rs  profile_loader.rs  profile_raw.rs  registration.rs  registry.rs  template_service.rs  test_helpers.rs  traits.rs
Rust3/crates/tfp-providers/tests/: chat_integration.rs  image_integration.rs
Rust3/crates/tfp-search/: Cargo.toml
Rust3/crates/tfp-search/src/: agent.rs  duckduckgo.rs  factory.rs  fetcher.rs  lib.rs  mcp.rs  models.rs  provider.rs
Rust3/crates/tfp-speech/: Cargo.toml
Rust3/crates/tfp-speech/src/: batch_transcription.rs  fast_transcription.rs  languages.rs  lib.rs  reconnect.rs  segment.rs  speech_batch_client.rs  subtitle.rs  text_filter.rs
Rust3/crates/tfp-storage/: Cargo.toml
Rust3/crates/tfp-storage/src/: audio_repo.rs  audiolab_repo.rs  billing_repo.rs  center_repo.rs  config_repo.rs  db.rs  lib.rs  live_repo.rs  media_repo.rs  monitor_repo.rs  session_repo.rs  studio_repo.rs
Rust3/crates/tfp-storage/tests/: config_roundtrip.rs
Rust3/src-tauri/: Cargo.toml  tauri.conf.json
Rust3/src-tauri/assets/: billing-tiers.json
Rust3/src-tauri/capabilities/: default.json
Rust3/src-tauri/src/: lib.rs  main.rs  state.rs  task_engine.rs  task_event_bus.rs  tauri_event_sink.rs
Rust3/src-tauri/src/commands/: audio.rs  audiolab.rs  auth.rs  batch.rs  center.rs  config.rs  floating.rs  live.rs  media.rs  mod.rs  monitor.rs  provider.rs  session.rs  studio.rs  system.rs  test.rs  test_runner.rs  translate.rs  video.rs
Rust3/src-tauri/src/image_pipeline/: catalog.rs  file_cache.rs  mod.rs  pipeline.rs
Rust3/src-tauri/tests/: common.rs
rustbackend/: .env.template  .gitignore  01-总体架构与技术选型.md  02-插件化能力引擎与多Provider设计.md  03-用户体系与计费权限系统.md  04-数据层部署与首次初始化.md  4.19-1变更.md  Cargo.toml  Dockerfile  docker-compose.yml  和主程序如何集成.md
rustbackend/config/: default.toml
rustbackend/crates/billing/: Cargo.toml
rustbackend/crates/billing/src/: lib.rs
rustbackend/crates/cache/: Cargo.toml
rustbackend/crates/cache/src/: lib.rs  memory.rs  redis_backend.rs
rustbackend/crates/credential-broker/: Cargo.toml
rustbackend/crates/credential-broker/src/: keyvault.rs  lib.rs
rustbackend/crates/domain/: Cargo.toml
rustbackend/crates/domain/src/: auth.rs  config.rs  lib.rs  models.rs
rustbackend/crates/gateway/: Cargo.toml
rustbackend/crates/gateway/src/: config.rs  error.rs  jwks.rs  main.rs  state.rs
rustbackend/crates/observability/: Cargo.toml
rustbackend/crates/observability/src/: lib.rs
rustbackend/crates/providers/: Cargo.toml
rustbackend/crates/providers/src/: lib.rs  registry.rs
rustbackend/crates/storage/: Cargo.toml
rustbackend/crates/storage/src/: error.rs  lib.rs  postgres.rs  sqlite.rs
rustnew-backend/crates/speech-sdk/: Cargo.toml  build.rs
rustnew-backend/crates/speech-sdk/src/: audio.rs  ffi.rs  lib.rs  speech.rs
tools/rust/cli/: Cargo.toml
tools/rust/cli/src/: main.rs  utils.rs
tools/rust/core/: Cargo.toml
tools/rust/core/src/: directory_icon_service.rs  ico_helper.rs  lib.rs  models.rs  pe_icon_extractor.rs
tools/rust/ui/: Cargo.toml
tools/rust/ui/src/: main.rs
(+722 files in other folders)
