[package]
name = "truefluent-pro-r3"
version = "0.1.0"
edition = "2021"

[lib]
name = "truefluent_pro_r3_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "custom-protocol"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream", "multipart"] }
rusqlite = { version = "0.32", features = ["bundled"] }
async-trait = "0.1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Local crates
tfp-core = { path = "../crates/tfp-core" }
tfp-providers = { path = "../crates/tfp-providers" }
tfp-storage = { path = "../crates/tfp-storage" }
tfp-engine = { path = "../crates/tfp-engine" }
tfp-chat = { path = "../crates/tfp-chat" }
tfp-media = { path = "../crates/tfp-media" }
tfp-audiolab = { path = "../crates/tfp-audiolab" }
tfp-search = { path = "../crates/tfp-search" }
tfp-speech = { path = "../crates/tfp-speech" }
