[package]
name = "tfp-audiolab"
version = "0.1.0"
edition = "2021"

[dependencies]
tfp-core = { path = "../tfp-core" }
tfp-storage = { path = "../tfp-storage" }
tfp-providers = { path = "../tfp-providers" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
sha2 = "0.10"
