[package]
name = "tfp-media"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["json", "multipart"] }
sha2 = "0.10"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = ["fs"] }
tfp-core = { path = "../tfp-core" }
tfp-storage = { path = "../tfp-storage" }
tfp-providers = { path = "../tfp-providers" }
