[package]
name = "tfp-providers"
version = "0.1.0"
edition = "2021"

[dependencies]
tfp-core = { path = "../tfp-core" }
async-trait = "0.1"
tokio = { version = "1", features = ["sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "stream", "multipart"] }
futures-util = "0.3"
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
