[package]
name = "tfp-providers"
version = "0.1.0"
edition = "2021"

[dependencies]
tfp-core = { path = "../tfp-core" }
async-trait = "0.1"
tokio = { version = "1", features = ["sync", "rt", "net"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "stream", "multipart"] }
futures-util = "0.3"
tracing = "0.1"
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
base64 = "0.22"
url = "2"
uuid = { version = "1", features = ["v4"] }
hmac = "0.12"
sha2 = "0.10"
chrono = "0.4"
urlencoding = "2"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
dirs = "5"
rusqlite = { version = "0.32", features = ["bundled"] }
