[package]
name = "tfp-search"
version = "0.1.0"
edition = "2021"

[dependencies]
tfp-core = { path = "../tfp-core" }
tfp-providers = { path = "../tfp-providers" }
reqwest = { version = "0.12", features = ["json"] }
scraper = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
tokio = { version = "1", features = ["rt", "macros"] }
regex = "1"
url = "2"
tracing = "0.1"
