[package]
name = "tfp-speech"
version = "0.1.0"
edition = "2021"

[dependencies]
tfp-core = { path = "../tfp-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["time"] }
thiserror = "2"
tracing = "0.1"
