[package]
name = "tfp-storage"
version = "0.1.0"
edition = "2021"

[dependencies]
tfp-core = { path = "../tfp-core" }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["sync"] }
sha2 = "0.10"
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["sync", "macros", "rt"] }
