[package]
name = "billing"
version.workspace = true
edition.workspace = true

[dependencies]
domain = { workspace = true }
storage = { workspace = true }
cache = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = "0.1.89"

[dev-dependencies]
tokio = { workspace = true }
