[package]
name = "credential-broker"
version.workspace = true
edition.workspace = true

[dependencies]
storage = { workspace = true }
secrecy = { workspace = true }
aes-gcm = { workspace = true }
base64 = { workspace = true }
rand = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
