[package]
name = "icon-tool"
version = "0.1.0"
edition = "2021"
description = "Icon & image multi-function CLI tool"

[[bin]]
name = "icon-tool"
path = "src/main.rs"

[dependencies]
icon-core = { path = "../core" }
image = { version = "0.25", features = ["png", "bmp", "ico"] }
sha2 = "0.10"
clap = { version = "4", features = ["derive"] }
serde_json = "1"
