[package]
name = "icon-core"
version = "0.1.0"
edition = "2021"
description = "Shared core library for icon extraction and manipulation"

[dependencies]

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_UI_Shell",
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
] }
