[package]
name = "tfp-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "译见 Pro 桌面应用（Tauri 2 + Rust）"
default-run = "tfp-desktop"

[lib]
name = "tfp_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "tfp-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"

tfp-core = { workspace = true }
speech-sdk = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
pollster = "0.3"
