[package]
name = "speech-test-ui"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "speech-test-ui"
path = "src/main.rs"

[dependencies]
speech-sdk = { path = "../speech-sdk" }
eframe = "0.29"
egui = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
pollster = "0.3"
log = "0.4"
env_logger = "0.11"
dirs = "5"
